WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114704
[BlackBerry] Viewport not rendered correctly
https://bugs.webkit.org/show_bug.cgi?id=114704
Summary
[BlackBerry] Viewport not rendered correctly
Jacky Jiang
Reported
2013-04-16 15:06:13 PDT
PR:326260.
Attachments
Patch
(3.47 KB, patch)
2013-04-16 15:17 PDT
,
Jacky Jiang
rwlbuis
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jacky Jiang
Comment 1
2013-04-16 15:17:28 PDT
Created
attachment 198441
[details]
Patch
Rob Buis
Comment 2
2013-04-16 15:38:32 PDT
Comment on
attachment 198441
[details]
Patch LGTM!
Jacky Jiang
Comment 3
2013-04-16 16:10:04 PDT
Committed
r148565
: <
http://trac.webkit.org/changeset/148565
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug