[BlackBerry] Viewport not rendered correctly https://bugs.webkit.org/show_bug.cgi?id=114704

Patch by Jacky Jiang <zhajiang@blackberry.com> on 2013-04-16.
Reviewed by Rob Buis.
Internally reviewed by Konrad Piascik.

PR: 326260
The applyDeviceScaleFactorInCompositor setting is now generated from
Settings.in after rebase, the setter should be setApplyDeviceScaleFactorInCompositor()
instead of setApplyPageScaleFactorInCompositor().
The setting can be removed from WebSettings and use a simpler way
instead in the future if there are no issues when TextAutoSizer is
enabled. Just keep it for now.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::didChangeSettings):
* Api/WebSettings.cpp:
(BlackBerry::WebKit::WebSettings::setApplyDeviceScaleFactorInCompositor):
* Api/WebSettings.h:

Canonical link: https://commits.webkit.org/133096@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148565 268f45cc-cd09-0410-ab3c-d52691b4dbfc